# VSCodeGlueTemplate

./: CMakeLists.txt  LICENSE  README.md  gnu-arm-toolchain.cmake  main.c  main.h  makefile  syscalls.c
BSP/Include/: ADuCM3027.h  adi_cyclecount.h  common.h  system_ADuCM3027.h  system_ADuCM3029.h
BSP/Include/drivers/beep/: adi_beep.h
BSP/Include/drivers/crypto/: adi_crypto.h
BSP/Include/drivers/gpio/: adi_gpio.h
BSP/Include/drivers/pwr/: adi_pwr.h
BSP/Include/drivers/rng/: adi_rng.h
BSP/Include/drivers/rtc/: adi_rtc.h
BSP/Include/drivers/spi/: adi_spi.h
BSP/Include/drivers/tmr/: adi_tmr.h
BSP/Include/drivers/wdt/: adi_wdt.h
BSP/Include/drivers/xint/: adi_xint.h
BSP/Include/rtos_map/: adi_rtos_map.h  adi_rtos_map_ucos_iii.h
BSP/Include/sys/: ADuCM302x_device.h
BSP/Source/: common.c  system_ADuCM3027.c
BSP/Source/ARM/: startup_ADuCM3027.s
BSP/Source/GCC/: startup_ADuCM3027.c
BSP/Source/drivers/adc/: adi_adc.c
BSP/Source/drivers/crypto/: adi_crypto.c  adi_pkstor.c
BSP/Source/drivers/flash/: adi_flash.c
BSP/Source/drivers/gpio/: adi_gpio.c
BSP/Source/drivers/pwr/: adi_pwr.c  adi_pwr_def.h
BSP/Source/drivers/rng/: adi_rng.c
BSP/Source/drivers/rtc/: adi_rtc.c  adi_rtc_data.c  adi_rtc_def.h
BSP/Source/drivers/spi/: adi_spi.c  adi_spi_def.h
BSP/Source/drivers/sport/: adi_sport.c
BSP/Source/drivers/tmr/: adi_tmr_data.c
BSP/Source/drivers/uart/: adi_uart.c  adi_uart_def.h
BSP/Source/drivers/wdt/: adi_wdt.c
DFP/Include/: ADuCM3027_cdef.h  ADuCM3027_def.h  ADuCM3027_device.h  ADuCM3027_typedefs.h  system_ADuCM3027.h  system_ADuCM3029.h
DFP/Include/drivers/crypto/: adi_crypto.h
DFP/Include/drivers/dma/: adi_dma.h
DFP/Include/drivers/flash/: adi_flash.h
DFP/Include/drivers/gpio/: adi_gpio.h
DFP/Include/drivers/pwr/: adi_pwr.h
DFP/Include/drivers/rtc/: adi_rtc.h
DFP/Include/drivers/uart/: adi_uart.h
DFP/Include/rtos_map/: adi_rtos_map.h  adi_rtos_map_freertos.h  adi_rtos_map_threadx.h  adi_rtos_map_ucos_ii.h
DFP/Include/sys/: ADuCM302x.h  ADuCM302x_cdef.h  ADuCM302x_typedefs.h  platform.h
DFP/SVD/: ADuCM302x.sfd
DFP/Source/: retarget_uart.c  system_ADuCM3027.c
DFP/Source/GCC/: ADuCM3027.ld  reset_ADuCM3027.S
DFP/Source/IAR/: startup_ADuCM3027.s
DFP/Source/drivers/adc/: adi_adc.c
DFP/Source/drivers/beep/: adi_beep.c
DFP/Source/drivers/crc/: adi_crc.c  adi_crc_def.h
DFP/Source/drivers/crypto/: adi_crypto.c  adi_crypto_def.h  adi_pkstor.c
DFP/Source/drivers/flash/: adi_flash_data.c  adi_flash_def.h
DFP/Source/drivers/gpio/: adi_gpio.c
DFP/Source/drivers/i2c/: adi_i2c.c  adi_i2c_def.h
DFP/Source/drivers/pwr/: adi_pwr.c  adi_pwr_def.h
DFP/Source/drivers/rtc/: adi_rtc.c  adi_rtc_data.c  adi_rtc_def.h
DFP/Source/drivers/spi/: adi_spi.c
DFP/Source/drivers/tmr/: adi_tmr.c
DFP/Source/drivers/uart/: adi_uart.c  adi_uart_def.h
DFP/Source/drivers/xint/: adi_xint.c
